topを真ん中に移動、アイコン追加

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
 <!--表紙-->
 
-  <div id="index-banner" class="parallax-container">
+  <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
        <div class="row center">
-        <h1 class="header center-align light">Lelu’s　Portfolio</h1>
+        <h1 class="header col s12 light">Lelu’s　Portfolio</h1>
        </div>
       </div>
     </div>
@@ -91,8 +91,8 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About me</h4>
-          <div class="col s12 m2 offset-m2">
-            <img id="profile-image" src="img/me.JPG" alt="プロフィール画像" width="200" height="200" data-aos-duration="300" data-aos="zoom-in" data-aos-once="true" class="aos-init aos-animate">
+          <div class="col s12 m5 offset-m1">
+            <img id="profile-image" src="img/me.JPG" alt="プロフィール画像">
         </div>
         <div class="col s12 m6">
           <p class="left-align light">
@@ -102,9 +102,10 @@
             <br>
             学生時代、そして就職後も個人開発していた経験を生かし、システムエンジニアとしての転職を目指しています。
           </p>
-          <ul>
-            <li>- GitHub: <a href="https://github.com/lelufig" target="_blank" rel="noopener">https://github.com/lelufig</a></li>
+          <ul class="left-align light">
             
+            <li>- GitHub: <a href="https://github.com/lelufig" target="_blank" rel="noopener">https://github.com/lelufig</a></li>
+          
           </ul>
         </div>
       </div>
@@ -146,10 +147,9 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
+  
 
-<div class="row">
+
   <div class="col s12 m4">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
@@ -165,10 +165,10 @@
       </div>
     </div>
   </div>
-</div>
-</div>
 
-<div class="row">
+
+
+
   <div class="col s12 m4">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
@@ -186,68 +186,10 @@
   </div>
 </div>
 </div>
-
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
-
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
-
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-  </div>>
+</div>
+</div>
+  
+  
 
 <!--前職の仕事内容-->
   <div class="container" id="previous">
@@ -262,31 +204,35 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center brown-text"><i class="material-icons">contact_mail</i></h2>
+            <h5 class="center">お問い合わせ対応</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light"></p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h2 class="center brown-text"><i class="material-icons">mode_edit</i></h2>
+            <h5 class="center">記事作成</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light"></p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center brown-text"><i class="material-icons">child_friendly</i></h2>
+            <h5 class="center">漫画の編集</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light"></p>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
 
 <!--画像3-->
   <div class="parallax-container valign-wrapper">
