画像の大きさ調整

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </p>
             <ul class="left-align light">
 
-              <li>- GitHub: <a href="https://github.com/lelufig" target="_blank"
+              <li><i class="fab fa-github"></i> GitHub: <a href="https://github.com/lelufig" target="_blank"
                   rel="noopener">https://github.com/lelufig</a></li>
 
             </ul>
@@ -145,22 +145,25 @@
           <!-- Modal Structure -->
           <div id="modal1" class="modal">
             <div class="modal-content">
-              
 
-                <h4>Lelu's Portfolio</h4>
 
-                <p class="left-align light"> 
-                  このWebページです。HTMLとCSS,jqueryを使用し、1枚のランディングページに仕上げました。Materializeというcssフレームワークと、マウスホバーエフェクトを使うことで動きのあるサイトに仕上がったと思います。
-                </p>
+              <h4>Lelu's Portfolio</h4>
+
+              <p class="left-align light">
+                このWebページです。HTMLとCSS,jqueryを使用し、1枚のランディングページに仕上げました。Materializeというcssフレームワークと、マウスホバーエフェクトを使うことで動きのあるサイトに仕上がったと思います。
+              </p>
+              <div class="col s12 m4">
                 <h6>◆使用言語など◆</h6>
                 <p>HTML,CSS,jquery,MaterializeCSS,EditorX</p>
                 <ur>
-                  <li>- GitHub: <a href="https://github.com/lelufig/portfolio" target="_blank"
-                    rel="noopener">https://github.com/lelufig/portfolio</a></li>
-                  </ur>
-              
-              <div class="col s12 m2">
-                <img src="img/portfolio.png" alt="ポートフォリオ画像">
+                  <li><a href="https://github.com/lelufig/portfolio" target="_blank" rel="noopener">
+                      <i class="fab fa-github"></i> GitHub</a>
+                    </li>
+                </ur>
+              </div>
+
+              <div class="col s12 m8">
+                <img src="img/portfolio.png" alt="ポートフォリオ画像" width="100%">
               </div>
 
             </div>
@@ -193,17 +196,30 @@
               <p class="left-align light">
                 大学4年生の秋に、初めて開発したwebアプリケーションです。友人の何人かが単位計算を誤って卒業が危ぶまれてしまったことをきっかけに自分が履修した単位を自動で計算してくれるアプリケーションを作りました。初めてのシステム開発で、5分に1回はエラーコードと戦う日々。それでも開発したシステムを喜んでくれる学生の顔を思い浮かべながら寝る間を惜しんで作りました。完成したときや実際に使ってもらって喜んでくれたときの達成感は忘れられません。プログラミングを使って何ができて、できないのかという感覚を身につけることもできました。
               </p>
-              <h6>◆使用言語など◆</h6>
-              <p>Python,Flask,Heroku,Bootstrap,HTML,CSS,</p>
-              <h6>◆制作物URL◆</h6>
-              <ul>
-                <li>- 単位計算システム: <a href="https://ypu-cc.herokuapp.com/" target="_blank"
-                    rel="noopener">https://ypu-cc.herokuapp.com/</a></li>
-                <li>- GitHub: <a href="https://github.com/lelufig/credit-calculator" target="_blank"
-                    rel="noopener">https://github.com/lelufig/credit-calculator</a></li>
+              <div class="col s12 m4">
+                <h6>◆使用言語など◆</h6>
+                <p>Python,Flask,Heroku,Bootstrap,HTML,CSS,</p>
+                <h6>◆制作物URL◆</h6>
+                <ul>
 
-              </ul>
-              <img src="img/credit.png" alt="単位計算システム画像">
+                  <li>
+                    <a href="https://ypu-cc.herokuapp.com/" target="_blank" rel="noopener">
+                      <i class="fab fa-earlybirds"></i>単位計算システム</a>
+                  </li>
+
+                  <li>
+                    <a href="https://github.com/lelufig/credit-calculator" target="_blank" rel="noopener">
+                      <i class="fab fa-github"></i> GitHub</a>
+                  </li>
+
+
+
+
+                </ul>
+              </div>
+              <div class="col s12 m8">
+                <img src="img/credit1.png" alt="単位計算システム画像" width="100%">
+              </div>
 
             </div>
             <div class="modal-footer">
@@ -234,12 +250,19 @@
             <div class="modal-content">
               <h4>Google App Script</h4>
 
-              <p class="left-align light">社内で開発したアプリにきた問い合わせをスプレッドシートに項目ごとに書き出せるようにしました。どんな問い合わせがきているのか可視化するために、問い合わせのきた時間や内容、返信内容についてスプレッドシートにまとめてほしいと依頼されたことがきっかけです。私が問い合わせ対応をしていたアプリは全部で７つあり、毎日のように問い合わせがきます。コピペで対応していたら何時間もかかってしまうし、私の次に問い合わせ対応をする人も困ってしまうと思いました。そこで、Google App Scriptを使って、問い合わせごとのメールアドレスを入力して実行ボタンを押せば、項目ごとに自動的にスプレッドシートに書き込んでくれるように設計しました。このとき初めてGoogle App Scriptを使ったので、便利さと簡単さに驚きました。Googleのサービス同士の連携はもっといろんなところで使えそうなので、勉強を続けたいです。
+              <p class="left-align light">
+                社内で開発したアプリにきた問い合わせをスプレッドシートに項目ごとに書き出せるようにしました。どんな問い合わせがきているのか可視化するために、問い合わせのきた時間や内容、返信内容についてスプレッドシートにまとめてほしいと依頼されたことがきっかけです。私が問い合わせ対応をしていたアプリは全部で７つあり、毎日のように問い合わせがきます。コピペで対応していたら何時間もかかってしまうし、私の次に問い合わせ対応をする人も困ってしまうと思いました。そこで、Google
+                App Scriptを使って、問い合わせごとのメールアドレスを入力して実行ボタンを押せば、項目ごとに自動的にスプレッドシートに書き込んでくれるように設計しました。このとき初めてGoogle App
+                Scriptを使ったので、便利さと簡単さに驚きました。Googleのサービス同士の連携はもっといろんなところで使えそうなので、勉強を続けたいです。
               </p>
-              <h6>◆使用言語など◆</h6>
-              <p>javascript</p>
-              <img src="img/spreadsheet.jpg" alt="GAS画像">
 
+              <div class="col s12 m4">
+                <h6>◆使用言語など◆</h6>
+                <p>Google App Script</p>
+              </div>
+              <div class="col s12 m8">
+                <img src="img/spreadsheet.jpg" alt="GAS画像" width="100%">
+              </div>
             </div>
             <div class="modal-footer">
               <a href="#!" class="modal-close waves-effect waves-green btn-flat">close</a>
@@ -266,16 +289,22 @@
             <div class="modal-content">
               <h4>Python×Selenium</h4>
 
-              <p class="left-align light">編集業務の一環として、インスタグラムで妊娠中のママたちの投稿を集める作業をしていたときに、投稿を自動で集めることができたら業務の効率化につながるのではと思い、スクレイピングにたどり着きました。具体的には、chromeを自動で操作して私自身のインスタグラムのアカウントにログインし、特定のハッシュタグがついたものだけを抽出してテキストエディタに書き出すというものです。投稿を一覧で見ることができ、使いたい投稿とそうでない投稿の判断が一瞬でつくようになり作業効率が格段に上がりました。
+              <p class="left-align light">
+                編集業務の一環として、インスタグラムで妊娠中のママたちの投稿を集める作業をしていたときに、投稿を自動で集めることができたら業務の効率化につながるのではと思い、スクレイピングにたどり着きました。具体的には、chromeを自動で操作して私自身のインスタグラムのアカウントにログインし、特定のハッシュタグがついたものだけを抽出してテキストエディタに書き出すというものです。投稿を一覧で見ることができ、使いたい投稿とそうでない投稿の判断が一瞬でつくようになり作業効率が格段に上がりました。
               </p>
-              <h6>◆使用言語など◆</h6>
-              <p>Python</p>
-              <ur>
-              <li>- GitHub: <a href="https://github.com/lelufig/babystory" target="_blank"
-                rel="noopener">https://github.com/lelufig/babystory</a></li>
-              </ur>
-              <img src="img/portfolio1.jpg" alt="セレニウム画像">
+              <div class="col s12 m4">
+                <h6>◆使用言語など◆</h6>
+                <p>Python</p>
 
+                <ur>
+                  <li><a href="https://github.com/lelufig/babystory" target="_blank" rel="noopener">
+                    <i class="fab fa-earlybirds"></i> GitHub</a>
+                  </li>
+                </ur>
+              </div>
+              <div class="col s12 m8">
+                <img src="img/Instagram1.png" alt="セレニウム画像" width="100%">
+              </div>
             </div>
             <div class="modal-footer">
               <a href="#!" class="modal-close waves-effect waves-green btn-flat">close</a>
@@ -313,7 +342,8 @@
               <h5 class="center">お問い合わせ対応</h5>
 
               <p class="light">
-                社内で開発したアプリについての問い合わせメールの対応を1年間対応していました。ここで社会人としての基本的なお客様との応対方法やメールの仕方などを学びました。お客様の要望をできるだけ叶えつつ、少しでもわかりやすい説明を心がけるため、アプリの仕様について少しでもわからないところがあれば、その都度開発者に質問をしていました。その結果、最終的には７つほどのアプリの問い合わせ対応を任されることができました。また、Google App Scriptを使ったスプレッドシートへの問い合わせ内容の書き込みなど、問い合わせ対応だけでない業務改善にも注力することができました。
+                社内で開発したアプリについての問い合わせメールの対応を1年間対応していました。ここで社会人としての基本的なお客様との応対方法やメールの仕方などを学びました。お客様の要望をできるだけ叶えつつ、少しでもわかりやすい説明を心がけるため、アプリの仕様について少しでもわからないところがあれば、その都度開発者に質問をしていました。その結果、最終的には７つほどのアプリの問い合わせ対応を任されることができました。また、Google
+                App Scriptを使ったスプレッドシートへの問い合わせ内容の書き込みなど、問い合わせ対応だけでない業務改善にも注力することができました。
               </p>
             </div>
           </div>
@@ -376,7 +406,7 @@
         </div>
       </div>
       <div class="col s12 aos-init aos-animate" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
-        <form method="POST" action="https://formspree.io/lelu.sakura@gmail.com">
+        <form method="POST" action="https://formspree.io/f/xbjqolel">
           <div class="input-field col s6 offset-m2 m4">
             <input id="name" name="name" type="text" required="">
             <label for="name">Name</label>
@@ -406,6 +436,7 @@
       <script src="js/init.js"></script>
 
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script src="https://kit.fontawesome.com/19d8271c5f.js" crossorigin="anonymous"></script>
 
       <script>
         // 以下jQuery
