文章の修正

--- a/index.html
+++ b/index.html
@@ -150,15 +150,17 @@
               <h4>Lelu's Portfolio</h4>
 
               <p class="left-align light">
-                このWebページです。HTMLとCSS,jqueryを使用し、1枚のランディングページに仕上げました。Materializeというcssフレームワークと、マウスホバーエフェクトを使うことで動きのあるサイトに仕上がったと思います。
+                このWebページです。HTMLとCSS,
+                jqueryを使用し、1枚のランディングページに仕上げました。Materializeというcssフレームワークと、マウスホバーエフェクトを使うことで動きのあるサイトに仕上がったと思います。
               </p>
               <div class="col s12 m4">
                 <h6>◆使用言語など◆</h6>
-                <p>HTML,CSS,jquery,MaterializeCSS,EditorX</p>
+                <p>HTML, CSS, jquery, MaterializeCSS, EditorX</p>
+                <h6>◆制作物URL◆</h6>
                 <ur>
                   <li><a href="https://github.com/lelufig/portfolio" target="_blank" rel="noopener">
                       <i class="fab fa-github"></i> GitHub</a>
-                    </li>
+                  </li>
                 </ur>
               </div>
 
@@ -198,10 +200,10 @@
               </p>
               <div class="col s12 m4">
                 <h6>◆使用言語など◆</h6>
-                <p>Python,Flask,Heroku,Bootstrap,HTML,CSS,</p>
+                <p>Python, Flask, Heroku, Bootstrap, HTML, CSS</p>
+
                 <h6>◆制作物URL◆</h6>
                 <ul>
-
                   <li>
                     <a href="https://ypu-cc.herokuapp.com/" target="_blank" rel="noopener">
                       <i class="fab fa-earlybirds"></i>単位計算システム</a>
@@ -211,10 +213,6 @@
                     <a href="https://github.com/lelufig/credit-calculator" target="_blank" rel="noopener">
                       <i class="fab fa-github"></i> GitHub</a>
                   </li>
-
-
-
-
                 </ul>
               </div>
               <div class="col s12 m8">
@@ -251,8 +249,8 @@
               <h4>Google App Script</h4>
 
               <p class="left-align light">
-                社内で開発したアプリにきた問い合わせをスプレッドシートに項目ごとに書き出せるようにしました。どんな問い合わせがきているのか可視化するために、問い合わせのきた時間や内容、返信内容についてスプレッドシートにまとめてほしいと依頼されたことがきっかけです。私が問い合わせ対応をしていたアプリは全部で７つあり、毎日のように問い合わせがきます。コピペで対応していたら何時間もかかってしまうし、私の次に問い合わせ対応をする人も困ってしまうと思いました。そこで、Google
-                App Scriptを使って、問い合わせごとのメールアドレスを入力して実行ボタンを押せば、項目ごとに自動的にスプレッドシートに書き込んでくれるように設計しました。このとき初めてGoogle App
+                社内で開発したアプリへの問い合わせ内容をスプレッドシートに書き出せるようにしました。どんな問い合わせがきているのか可視化するために、問い合わせのきた時間や内容、返信内容についてスプレッドシートにまとめてほしいと依頼されたことがきっかけです。私が問い合わせ対応をしていたアプリは全部で７つあり、毎日のように問い合わせがきます。コピペで対応していたら何時間もかかってしまうし、私の次に問い合わせ対応をする人も困ってしまうと思いました。そこで、Google
+                App Scriptを使って、問い合わせ先のメールアドレスを入力して実行ボタンを押せば、項目ごとに自動的にスプレッドシートに書き込んでくれるように設計しました。このとき初めてGoogle App
                 Scriptを使ったので、便利さと簡単さに驚きました。Googleのサービス同士の連携はもっといろんなところで使えそうなので、勉強を続けたいです。
               </p>
 
@@ -260,6 +258,7 @@
                 <h6>◆使用言語など◆</h6>
                 <p>Google App Script</p>
               </div>
+
               <div class="col s12 m8">
                 <img src="img/spreadsheet.jpg" alt="GAS画像" width="100%">
               </div>
@@ -296,9 +295,10 @@
                 <h6>◆使用言語など◆</h6>
                 <p>Python</p>
 
+                <h6>◆制作物URL◆</h6>
                 <ur>
                   <li><a href="https://github.com/lelufig/babystory" target="_blank" rel="noopener">
-                    <i class="fab fa-earlybirds"></i> GitHub</a>
+                      <i class="fab fa-earlybirds"></i> GitHub</a>
                   </li>
                 </ur>
               </div>
@@ -342,7 +342,7 @@
               <h5 class="center">お問い合わせ対応</h5>
 
               <p class="light">
-                社内で開発したアプリについての問い合わせメールの対応を1年間対応していました。ここで社会人としての基本的なお客様との応対方法やメールの仕方などを学びました。お客様の要望をできるだけ叶えつつ、少しでもわかりやすい説明を心がけるため、アプリの仕様について少しでもわからないところがあれば、その都度開発者に質問をしていました。その結果、最終的には７つほどのアプリの問い合わせ対応を任されることができました。また、Google
+                アプリへの問い合わせメールの対応を1年間対応していました。ここで社会人としての基本的なお客様との応対方法やメールの仕方などを学びました。お客様の要望をできるだけ叶えつつ、少しでもわかりやすい説明を心がけるため、アプリの仕様について少しでもわからないところがあれば、その都度開発者に質問をしていました。その結果、最終的には７つほどのアプリの問い合わせ対応を任されることができました。また、Google
                 App Scriptを使ったスプレッドシートへの問い合わせ内容の書き込みなど、問い合わせ対応だけでない業務改善にも注力することができました。
               </p>
             </div>
@@ -365,7 +365,7 @@
               <h5 class="center">漫画の編集</h5>
 
               <p class="light">
-                漫画家さんと一緒にアプリで読まれる漫画の制作をしていました。具体的には、ストーリー案の提案や漫画の1話ごとの構成案の作成、いただいた下書きのチェックと公開する記事の作成などです。漫画家さんは育児中や妊娠中のママさんのため、体調をくずしてしまったり、子育てで時間がとれないことも多々あります。そのため、できるだけzoomやLINEのビデオ通話を使って顔を見ながらコミュニケーションをとるようにしていました。そうすると、文章では言いづらいお子さんの話や悩みを打ち明けてくれることもあり、新たにストーリー案を提案できたり、漫画家さんの負担にならないようなスケジュール調整を提案できたりしました。
+                育児漫画アプリに掲載する漫画の編集をしていました。具体的には、ストーリー案の提案や漫画の1話ごとの構成案の作成、いただいた下書きのチェックと公開する記事の作成などです。漫画家さんは育児中や妊娠中のママさんのため、体調をくずしてしまったり、子育てで時間がとれないことも多々あります。そのため、できるだけzoomやLINEのビデオ通話を使って顔を見ながらコミュニケーションをとるようにしていました。そうすると、文章では言いづらいお子さんの話や悩みを打ち明けてくれることもあり、新たにストーリー案を提案できたり、漫画家さんの負担にならないようなスケジュール調整を提案できたりしました。
               </p>
             </div>
           </div>
