タイトルとかの細かい修正

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <img src="img/sea.JPG" alt="img01" />
             <figcaption>
               <h2>Port<span>folio</span></h2>
-              <p>ポートフォリオサイトの作成方法について</p>
+              <p>ポートフォリオサイトの作成について</p>
               <a class="waves-effect waves-light btn modal-trigger" href="#modal1">View more</a>
             </figcaption>
           </figure>
@@ -155,7 +155,7 @@
               </p>
               <div class="col s12 m4">
                 <h6>◆使用言語など◆</h6>
-                <p>HTML, CSS, jquery, MaterializeCSS, EditorX</p>
+                <p>HTML, CSS, jQuery, MaterializeCSS, EditorX</p>
                 <h6>◆制作物URL◆</h6>
                 <ur>
                   <li><a href="https://github.com/lelufig/portfolio" target="_blank" rel="noopener">
@@ -298,7 +298,7 @@
                 <h6>◆制作物URL◆</h6>
                 <ur>
                   <li><a href="https://github.com/lelufig/babystory" target="_blank" rel="noopener">
-                      <i class="fab fa-earlybirds"></i> GitHub</a>
+                      <i class="fab fa-github"></i> GitHub</a>
                   </li>
                 </ur>
               </div>
