--- a/index.html
+++ b/index.html
@@ -75,14 +75,7 @@
   <!--画像2-->
 
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light"></h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="img/sea.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img/sea.JPG" alt="Unsplashed background img 2"></div>
   </div>
 
   <!--私について-->
